Use COMPOSE_PROJECT_NAME instead of PROJECT_NAME.

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 ### PROJECT SETTINGS
 # TODO Change these.
-PROJECT_NAME=my_project
+COMPOSE_PROJECT_NAME=my_project
 PROJECT_BASE_URL=my-project.l
 
 ### --- DATABASE ---
